# ghc-dump-tree

./: .gitignore  CONTRIBUTORS  ChangeLog.md  LICENSE  README.md  buildall.sh  cabal.project  ghc-dump-tree.cabal  stack.yaml
src/: Main.hs
src/Language/Haskell/GHC/: DumpTree.hs
