name:                ghc-dump-tree
version:             0.1.0.0
synopsis:            Dump GHC's parsed, renamed, and type checked ASTs
description:         Useful for GHC devs or people who want to do something with
                     GHC's AST but don't want to hook into the GHC API itself.
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Development
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.4.2, GHC==7.8.3, GHC==7.10.0.20150310

executable ghc-dump-tree
  main-is:             Main.hs
  build-depends:       base                 >=4.5 && <4.9,
                       aeson                >=0.7,
                       bytestring           >=0.9,
                       ghc                  >=7.4,
                       optparse-applicative >=0.11,
                       pretty-show          >=1.6,
                       process              >=1.1,
                       vector               >=0.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  other-extensions:    CPP
  default-extensions:  RecordWildCards
                       OverloadedStrings
