name:                ghc-dump-tree
version:             0.1.0.0
synopsis:            Dump GHC's parsed, renamed, and type checked ASTs
description:         Useful for GHC devs or people who want to do something with
                     GHC's AST but don't want to hook into the GHC API itself.
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
category:            Development
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.4.2, GHC==7.8.3, GHC==7.10.0.20150310

library
  build-depends:       base                 >=4.5  && <4.9,
                       aeson                >=0.7  && <0.11,
                       bytestring           >=0.9  && <0.11,
                       ghc                  >=7.4  && <7.12,
                       pretty               >=1.1  && <1.2,
                       pretty-show          >=1.6  && <1.7,
                       process              >=1.1  && <1.3,
                       unordered-containers >=0.2  && <0.3,
                       vector               >=0.10 && <0.12
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  other-extensions:    CPP
  default-extensions:  RecordWildCards
                       OverloadedStrings
  exposed-modules:     Language.Haskell.GHC.DumpTree

executable ghc-dump-tree
  main-is:             Main.hs
  build-depends:       base                 >=4.5  && <4.9,
                       aeson                >=0.7  && <0.11,
                       bytestring           >=0.9  && <0.11,
                       ghc                  >=7.4  && <7.12,
                       optparse-applicative >=0.11 && <0.13,
                       pretty               >=1.1  && <1.2,
                       pretty-show          >=1.6  && <1.7,
                       process              >=1.1  && <1.3,
                       unordered-containers >=0.2  && <0.3,
                       vector               >=0.10 && <0.12,
                       ghc-dump-tree
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  other-extensions:    CPP
  default-extensions:  RecordWildCards
                       OverloadedStrings
