name:                ghc-dump-tree
version:             0.2.0.2
synopsis:            Dump GHC's parsed, renamed, and type checked ASTs
description:         Useful for GHC devs or people who want to do something with
                     GHC's AST but don't want to hook into the GHC API itself.
license:             BSD3
license-file:        LICENSE
author:              Edsko de Vries
maintainer:          edsko@well-typed.com
copyright:           Copyright 2015 Well-Typed LLP
homepage:            https://github.com/edsko/ghc-dump-tree
bug-reports:         https://github.com/edsko/ghc-dump-tree/issues
category:            Development
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.4.2, GHC==7.6.3, GHC==7.8.3, GHC==7.10.3, GHC==8.0.0.20160421

extra-source-files:
  ChangeLog.md
  README.md
  CONTRIBUTORS

source-repository head
  type: git
  location: https://github.com/edsko/ghc-dump-tree.git

library
  build-depends:       base                 >=4.5  && <4.10,
                       aeson                >=0.7  && <0.12,
                       bytestring           >=0.9  && <0.11,
                       ghc                  >=7.4  && <8.2,
                       pretty               >=1.1  && <1.2,
                       pretty-show          >=1.6  && <1.7,
                       process              >=1.1  && <1.5,
                       unordered-containers >=0.2  && <0.3,
                       vector               >=0.10 && <0.12
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  other-extensions:    CPP
  default-extensions:  RecordWildCards
                       OverloadedStrings
  exposed-modules:     Language.Haskell.GHC.DumpTree

executable ghc-dump-tree
  main-is:             Main.hs
  build-depends:       base                 >=4.5  && <4.10,
                       aeson                >=0.7  && <0.12,
                       bytestring           >=0.9  && <0.11,
                       ghc                  >=7.4  && <8.2,
                       optparse-applicative >=0.11 && <0.13,
                       pretty               >=1.1  && <1.2,
                       pretty-show          >=1.6  && <1.7,
                       process              >=1.1  && <1.5,
                       unordered-containers >=0.2  && <0.3,
                       vector               >=0.10 && <0.12,
                       ghc-dump-tree
  hs-source-dirs:      src
  other-modules:       Language.Haskell.GHC.DumpTree
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  other-extensions:    CPP
  default-extensions:  RecordWildCards
                       OverloadedStrings
